Prevent overflow when adding input values

--- a/rekenlogboek/client-side/src/scss/teacher/components/column/AddColumn.scss
+++ b/rekenlogboek/client-side/src/scss/teacher/components/column/AddColumn.scss
@@ -2,6 +2,7 @@
 
 .AddColumns {
 	padding: 5% 0;
+	height: 100%;
 	width: 100%;
 
 	h4 {
@@ -33,6 +34,10 @@
 			padding: 1vh 2.5%;
 			width: calc(100% - 2px);
 		}
+	}
+	.Values {
+		max-height: 30%;
+		overflow-y: scroll;
 	}
 
 	// RADIO BUTTONS COLUMN TYPE
